[Order Management] - Load the product list from database and store to map - Use the productMap to place/remove order to cart, get total money, checkout to persist changes to database - Add handler for not enough quantity exception - Add logback

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,3 +37,12 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.jdbc.time_zone = GMT+7
 # This line to avoid the failed startup error with Swagger (from Spring Boot v2.6)
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+#======================================================================================================
+# LOGGER
+#======================================================================================================
+logging.file.name=invest-service
+logging.level.org.springframework.web=INFO
+logging.level.investment.stock=DEBUG
+logging.level.com.tcbs.bond.trading.logging.AutoLoggingServiceImpl=TRACE
+logging.config=classpath:logback-spring.xml
+#======================================================================================================
